--- a/artdesign.html
+++ b/artdesign.html
@@ -17,13 +17,13 @@
   </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/oncuecover2.jpg">
           <img src="/images/oncuecover2_min.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">A collage of magazine snippets designed as a book or album cover; edited in Photoshop.<a href=""></a></p>
       </div>
@@ -46,65 +46,65 @@
     </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccccatering.png">
           <img src="/images/wccccatering_min.png" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccclogoletters.png">
           <img src="/images/wccclogoletters_min.png" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/collage.jpg">
           <img src="/images/collage_min.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">A collage I made for an experimental drawing class assignment.<a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/bw_figure_full.jpg">
           <img src="/images/bw_figure_min.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
       </div>
     </div>
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/bw_figure2_full.jpg">
           <img src="/images/bw_figure2_min.jpg" style="">
         </a>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
         <p class="">A figure drawing I did for a class assignment.<a href=""></a></p>
       </div>
@@ -137,11 +137,11 @@
     </div> -->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
            <iframe src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
-      <div class="col-lg-6">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
       </div>
