--- a/code.html
+++ b/code.html
@@ -20,8 +20,8 @@
   </div>
 
   <!-- add a mobile-responsive png-->
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="in-progress" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
@@ -30,20 +30,20 @@
       </a>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using the Last.fm's API and D3.js for week 12/12 of a web development course.</p>
       <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://w09wdiproj.herokuapp.com/">
         <img class="example" src="/images/w09_wdiproj3.png">
       </a>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <p class="annotation">Real-time, full-stack <a href="https://w09wdiproj.herokuapp.com/">Node.js survey application</a> I made for week 09/12 of a web development course.</p>
       <p>Source code & documentation:
         <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
@@ -51,79 +51,79 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://pantrydotio.herokuapp.com/">
         <img class="in-progress" src="/images/pantry.io_min.png">
       </a>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> for week 06/12 of WDI.</p>
       <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://tttcmyk.pancakeapps.com/">
         <img id="ex_2" class="example" src="/images/tictactoe_cmyk.png">
       </a>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery.</p>
       <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
-    <div class="col-lg-6">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="example" src="/images/lrngo_landing_pages/othercoolstuff.png">
       </a>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <p class="annotation">
         <a href="http://www.lrngo.com/coolstuff">Landing pages I designed.</a>
       </p>
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-lg-9">
+  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <a href="http://www.lrngo.com/coolstuff">
-      <img class="left1-mini col-lg-2" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
+      <img class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
     </a>
     <a href="http://www.lrngo.com/coolstuff">
-      <img class="left2-mini col-lg-2" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
+      <img class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
     </a>
 
     <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
+      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
     </a>
     <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
+      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
     </a>
     <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
+      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
     </a>
     <a href="http://www.lrngo.com/music-arts">
-      <img class="left1-mini col-lg-2" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
+      <img class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
     </a>
 
     <a href="http://www.lrngo.com/sports-fitness">
-      <img class="left2-mini col-lg-2" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
+      <img class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
     </a>
     <a href="http://www.lrngo.com/sports-fitness">
-      <img class="mini col-lg-2" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
+      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
     </a>
 
     <a href="http://www.lrngo.com/sports-fitness">
-      <img class="mini col-lg-2" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
+      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
     </a>
     <a href="http://www.lrngo.com/sports-fitness">
-      <img class="botmost-mini col-lg-2" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
+      <img class="botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
     </a>
     </div>
 
