--- a/code.html
+++ b/code.html
@@ -42,6 +42,19 @@
     <!-- add a mobile-responsive png-->
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="#">
+          <img class="image" src="/images/med/comingsoon.png">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href="#"></a>Angular.js project and blog post about front-end frameworks.</p>
+        <p class="">Source code & documentation: <a href="#"></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="http://lastichecked.herokuapp.com/">
           <img class="image" src="/images/med/lastichecked.png">
           <!-- <div class="coming_soon">
