--- a/code.html
+++ b/code.html
@@ -43,7 +43,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="#">
-          <img class="image" src="/images/med/comingsoon.png">
+          <img class="image" src="/images/med/comingsoon_blue.png">
         </a>
       </div>
 
