--- a/code.html
+++ b/code.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="#"></a>Angular.js project and blog post about front-end frameworks.</p>
+        <p class="annotation"><a href="#"></a>An Angular.js project I made and a blog post about front-end frameworks.</p>
         <p class="">Source code & documentation: coming soon<a href="#"></a></p>
       </div>
     </div>
@@ -61,7 +61,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using Last.fm's API and D3.js for week 12/12 of a web development course.</p>
+        <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
       </div>
     </div>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> for week 06/12 of WDI.</p>
+        <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> I made for week 06/12 of WDI.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
