--- a/code.html
+++ b/code.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course.</p>
+        <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> I made using Last.fm's API and D3.js for week 12/12 of a web development course (WDI).</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
       </div>
     </div>
@@ -74,7 +74,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Real-time, full-stack Node.js <a href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of a web development course.</p>
+        <p class="annotation">Real-time, full-stack Node.js <a href="https://w09wdiproj.herokuapp.com/">survey application</a> I made during week 09/12 of WDI.</p>
         <p>Source code & documentation:
           <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
         </p>
@@ -89,7 +89,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of a web development course.</p>
+        <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> made for a group project during week 06/12 of WDI.</p>
         <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
       </div>
     </div>
@@ -102,7 +102,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery during week 03/12 of a web development course.</p>
+        <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery during week 03/12 of WDI.</p>
         <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
       </div>
     </div>
