--- a/code.html
+++ b/code.html
@@ -102,7 +102,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery during week 03/12 of WDI.</p>
+        <p class="annotation">Vanilla JS <a href="https://tttcmyk.pancakeapps.com/">Tic-tac-toe app</a> I made during week 03/12 of WDI.</p>
         <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
       </div>
     </div>
