--- a/code.html
+++ b/code.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="#"></a>An Angular.js project I made and a blog post about front-end frameworks.</p>
+        <p class="annotation"><a href="#"></a>An Angular.js project and a blog post about front-end frameworks.</p>
         <p class="">Source code & documentation: coming soon<a href="#"></a></p>
       </div>
     </div>
