--- a/code.html
+++ b/code.html
@@ -121,7 +121,7 @@
       </div>
     </div>
 
-    <div id="content margin_bottom" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
+    <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
       </a>
