--- a/artdesign.html
+++ b/artdesign.html
@@ -158,7 +158,7 @@
       </div>
     </div> -->
 
-    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+    <!-- <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
            <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
@@ -167,7 +167,7 @@
         <p class="annotation"><a href="https://vimeo.com/158437381">Engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
         <p class="">A film themed around gender that I shot and edited.<a href=""></a></p>
       </div>
-    </div>
+    </div> -->
 
     <!--<img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
     <span style="display: block;">* change the font here *</span>
