--- a/code.html
+++ b/code.html
@@ -36,6 +36,7 @@
       <p><a href="index.html">About Me</a></p>
       <!--<p><a href="writing.html">Writing</a></p>-->
       <p><a href="artdesign.html">Art & Design</a></p>
+      <p><a href="/pdfs/resume.pdf">Resume</a></p>
       <p><a href="contact.html">Contact</a></p>
     </div>
 
