--- a/contact.html
+++ b/contact.html
@@ -35,6 +35,7 @@
     <p><a href="code.html">Code</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="/pdfs/resume.pdf">Resume</a></p>
   </div>
 
   <!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
