--- a/writing.html
+++ b/writing.html
@@ -34,6 +34,7 @@
     <p><a href="index.html">About Me</a></p>
     <p><a href="code.html">Code</a></p>
     <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="/pdfs/resume.pdf">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
