--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <p><a href="code.html">Code</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
+    <p><a href="/pdfs/resume.pdf">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
