--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 
   <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
     <p>I majored in Literature and Visual Arts at Duke University, where I did literature research and completed challenging art and design projects. After graduating from college, I tutored reading and writing for college entrance exams, applied for technical writing and copy editing work, and took a web development internship with a local startup.</p>
-    <p>I got interested in web development because it rewarded patience and attention to detail and because I was excited about the potential of open source, data visualization, and using code to build educational tools. Working on real projects convinced me that I wanted to pursue a career involving web development and that I could also use my writing and visual arts skills in this line of work. Inspired by this, I recently completed the Web Development Immersive program at General Assembly in Austin, TX, where I learned full-stack development.</p>
-    <p>I enjoy watching basketball and soccer, reading and writing, listening to music, and exercising. I also like to change what I put here.</p>
+    <p>I got interested in web development because it rewarded patience and attention to detail and because I was excited about the potential of open source, data visualization, and using code to build educational tools. Working on real projects where I could use my writing and visual arts skills as well as my technical inclinations convinced me that I wanted to pursue a career involving web development. Inspired by this, I recently completed the Web Development Immersive program at General Assembly in Austin, TX, where I learned full-stack development.</p>
+    <p>On my free time, I enjoy watching basketball and soccer, reading and writing, listening to music, and exercising. I also like to change what I put here.</p>
   </div>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
