--- a/test/code.html
+++ b/test/code.html
@@ -48,8 +48,8 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="angularjsdemoapp.herokuapp.com"></a>A basic Angular.js to-do list app. Updates coming soon.</p>
-        <p class="">Source code & documentation: angular_to_do_list<a href="github.com/angular_to_do_list"></a></p>
+        <p class="annotation"><a href="angularjsdemoapp.herokuapp.com">A basic Angular.js to-do list app. Updates coming soon.</a></p>
+        <p class="">Source code & documentation: <a href="github.com/angular_to_do_list">angular_to_do_list</a></p>
       </div>
     </div>
 
